@@ -1,6 +1,3 @@
-- Buglet: cvm-validate seg faults if you forget to set CVM_LOOKUP_SECRET?
-(John Levine)
-
 - Fix SASL "Authentication failed" message to include EMSS code
 
 - Write install document.
